# Regression-Analysis

algorithms/: CMakeLists.txt  main.cpp
algorithms/src/: RegressionModel.cpp  RegressionModel.hpp  Sample.cpp  Sample.hpp
